--- a/Assignment/Server/WebAPI/WebAPI.csproj
+++ b/Assignment/Server/WebAPI/WebAPI.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\FileRepositories\FileRepositories.csproj" />
     <ProjectReference Include="..\..\Shared\ApiContracts\ApiContracts.csproj" />
     <ProjectReference Include="..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\EfcRepositories\EfcRepositories.csproj" />
   </ItemGroup>
 
 </Project>
